[BookKeeping/upstreams] Be able to show active records only
